--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Desafio 1 css</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="src/css/style.css">
   <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>   
 </head>
 <body>
-  <div class="container">
+  <article class="container">
     <div>
       <div class="card-normal">
         <div class="card-body">
@@ -48,7 +48,6 @@
        
       </div>
     </div>
-  </div>
-
+  </article>
 </body>
 </html>
